--- a/styles2.css
+++ b/styles2.css
@@ -1,3 +1,9 @@
 body {
     background-color: blue;
 }
+h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 150px;
+    color: white;
+    text-align: center;
+}
