--- a/styles2.css
+++ b/styles2.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blue;
+    background-color:black;
 }
 h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
