--- a/styles2.css
+++ b/styles2.css
@@ -4,6 +4,6 @@ body {
 h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 150px;
-    color: white;
+    color: rgb(10, 3, 3);
     text-align: center;
 }
