--- a/styles2.css
+++ b/styles2.css
@@ -7,3 +7,9 @@ h1 {
     color: green;
     text-align: center;
 }
+h2 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 50px;
+    color: green;
+    text-align: left;
+}
