--- a/styles2.css
+++ b/styles2.css
@@ -13,3 +13,9 @@ h2 {
     color: green;
     text-align: left;
 }
+h3 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 25px;
+    color: green;
+    text-align: left;
+}
