--- a/styles2.css
+++ b/styles2.css
@@ -36,3 +36,9 @@ h5 {
     width: 250px;
     height: 250px;
 }
+h6 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 10px;
+    color: green;
+    text-align: left;
+}
