--- a/styles2.css
+++ b/styles2.css
@@ -48,3 +48,9 @@ h7 {
     color: green;
     text-align: left; 
 }
+h8 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 10px;
+    color: green;
+    text-align: left; 
+}
