--- a/styles2.css
+++ b/styles2.css
@@ -60,3 +60,9 @@ h9 {
     color: green;
     text-align: left;    
 }
+h10 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 10px;
+    color: green;
+    text-align: left;   
+}
