--- a/styles2.css
+++ b/styles2.css
@@ -66,3 +66,9 @@ h10 {
     color: green;
     text-align: left;   
 }
+h11 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 10px;
+    color: green;
+    text-align: left;   
+}
