--- a/styles2.css
+++ b/styles2.css
@@ -72,3 +72,9 @@ h11 {
     color: green;
     text-align: left;   
 }
+h12 {
+    ont-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 25px;
+    color: green;
+    text-align: left;
+}
