--- a/styles2.css
+++ b/styles2.css
@@ -90,3 +90,9 @@ h13 {
     color: green;
     text-align: left;
 }
+h15 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 25px;
+    color: green;
+    text-align: left;
+}
