--- a/styles2.css
+++ b/styles2.css
@@ -94,5 +94,5 @@ h15 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 25px;
     color: green;
-    text-align: left;
+    text-align: right;
 }
