--- a/styles2.css
+++ b/styles2.css
@@ -96,3 +96,10 @@ h15 {
     color: green;
     text-align: right;
 }
+p1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 25px;
+    color: green;
+    text-align: right;
+}
+
